# MTN_Mobile_Money_With_Campay.net_Python

./: README.md  example.py  pyproject.toml  setup.cfg
src/campay/: sdk.py
